WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212345
[css-grid] grid-template-rows can serialize to invalid syntax when set by grid-template
https://bugs.webkit.org/show_bug.cgi?id=212345
Summary
[css-grid] grid-template-rows can serialize to invalid syntax when set by gri...
Oriol Brufau
Reported
2020-05-25 05:48:14 PDT
Run this code: document.body.style.gridTemplate = "'s1' [l1] [l2] 's2'"; document.body.style.gridTemplateRows; WebKit returns "auto [l1] [l2] auto", which is invalid syntax because, unlike grid-template, grid-template-rows does not accept adjacent <line-names>. It should return "auto [l1 l2] auto", like Firefox and Chromium do.
Attachments
Patch
(20.87 KB, patch)
2020-05-25 06:46 PDT
,
Oriol Brufau
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oriol Brufau
Comment 1
2020-05-25 06:46:20 PDT
Created
attachment 400197
[details]
Patch
Manuel Rego Casasnovas
Comment 2
2020-05-25 13:21:24 PDT
Comment on
attachment 400197
[details]
Patch r=me, thanks for the fix
EWS
Comment 3
2020-05-25 13:39:49 PDT
Committed
r262130
: <
https://trac.webkit.org/changeset/262130
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 400197
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-05-25 13:40:15 PDT
<
rdar://problem/63604814
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug