[css-grid] Prevent grid-template-rows from serializing adjacent <line-names> https://bugs.webkit.org/show_bug.cgi?id=212345

Reviewed by Manuel Rego Casasnovas.

LayoutTests/imported/w3c:

Update test expectations.

* web-platform-tests/css/css-grid/parsing/grid-shorthand-expected.txt:
* web-platform-tests/css/css-grid/parsing/grid-shorthand-valid-expected.txt:
* web-platform-tests/css/css-grid/parsing/grid-template-shorthand-expected.txt:
* web-platform-tests/css/css-grid/parsing/grid-template-shorthand-valid-expected.txt:

Source/WebCore:

The parser for the grid-template shorthand has this code:

    // Persists between loop iterations so we can use the same value for
    // consecutive <line-names> values
    RefPtr<CSSGridLineNamesValue> lineNames;

However, this wasn't working because of a lineNames.releaseNonNull() at
the end of the loop. So each iteration started with a null lineNames, and
consecutive <line-names> values were not merged together.

Tests: fast/css-grid-layout/grid-template-shorthand-get-set.html
       imported/w3c/web-platform-tests/css/css-grid/parsing/grid-shorthand.html
       imported/w3c/web-platform-tests/css/css-grid/parsing/grid-shorthand-valid.html
       imported/w3c/web-platform-tests/css/css-grid/parsing/grid-template-shorthand.html
       imported/w3c/web-platform-tests/css/css-grid/parsing/grid-template-shorthand-valid.html

* css/parser/CSSPropertyParser.cpp:
(WebCore::CSSPropertyParser::consumeGridTemplateRowsAndAreasAndColumns):

LayoutTests:

Update test expectations.

* fast/css-grid-layout/grid-template-shorthand-get-set-expected.txt:
* fast/css-grid-layout/grid-template-shorthand-get-set.html:


Canonical link: https://commits.webkit.org/225193@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262130 268f45cc-cd09-0410-ab3c-d52691b4dbfc